<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

  <parent>
    <artifactId>spring-boot-starter-parent</artifactId>
    <groupId>org.springframework.boot</groupId>
    <version>2.7.11</version>
    <relativePath/>
  </parent>

  <groupId>com.food.ordering.system</groupId>
  <artifactId>food-ordering-system</artifactId>
  <version>1.0-SNAPSHOT</version>
  <packaging>pom</packaging>

  <properties>
    <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
    <mockito.version>4.11.0</mockito.version>
    <spring-kafka.version>2.9.8</spring-kafka.version>
    <kafka-avro-serializer.version>7.0.1</kafka-avro-serializer.version>
    <avro.version>1.11.1</avro.version>
    <postgresql.version>42.5.4</postgresql.version>
    <!-- k8s -->
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <modelVersion>4.0.0</modelVersion>
  <modules>
    <module>order-service</module>
    <module>common</module>
    <module>infrastructure</module>
    <module>customer-service</module>
    <module>payment-service</module>
    <module>restaurant-service</module>
  </modules>

  <dependencyManagement>
    <dependencies>
      <!-- 0. Infrastructure Saga/Outbox/Kafka-->
      <dependency>
        <groupId>com.food.ordering.system</groupId>
        <artifactId>saga</artifactId>
        <version>${project.version}</version>
      </dependency>

      <dependency>
        <groupId>com.food.ordering.system</groupId>
        <artifactId>outbox</artifactId>
        <version>${project.version}</version>
      </dependency>

      <dependency>
        <groupId>com.food.ordering.system</groupId>
        <artifactId>kafka-producer</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.food.ordering.system</groupId>
        <artifactId>kafka-consumer</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.food.ordering.system</groupId>
        <artifactId>kafka-model</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.food.ordering.system</groupId>
        <artifactId>kafka-config-data</artifactId>
        <version>${project.version}</version>
      </dependency>

      <!-- 1. Common ...-->
      <dependency>
        <groupId>com.food.ordering.system</groupId>
        <artifactId>common-domain</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.food.ordering.system</groupId>
        <artifactId>common-application</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.food.ordering.system</groupId>
        <!-- Order and Restaurant Shared Dataaccess -->
        <artifactId>common-dataaccess</artifactId>
        <version>${project.version}</version>
      </dependency>

      <!-- Customer ...-->
      <dependency>
        <groupId>com.food.ordering.system</groupId>
        <artifactId>customer-domain-core</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.food.ordering.system</groupId>
        <artifactId>customer-domain-service</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.food.ordering.system</groupId>
        <artifactId>customer-application</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.food.ordering.system</groupId>
        <artifactId>customer-dataaccess</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.food.ordering.system</groupId>
        <artifactId>customer-messaging</artifactId>
        <version>${project.version}</version>
      </dependency>

      <!-- Order ...-->
      <dependency>
        <groupId>com.food.ordering.system</groupId>
        <artifactId>order-domain-core</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.food.ordering.system</groupId>
        <artifactId>order-domain-service</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.food.ordering.system</groupId>
        <artifactId>order-application</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.food.ordering.system</groupId>
        <artifactId>order-dataaccess</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.food.ordering.system</groupId>
        <artifactId>order-messaging</artifactId>
        <version>${project.version}</version>
      </dependency>

      <!-- Payment ...-->
      <dependency>
        <groupId>com.food.ordering.system</groupId>
        <artifactId>payment-domain-core</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.food.ordering.system</groupId>
        <artifactId>payment-domain-service</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.food.ordering.system</groupId>
        <artifactId>payment-dataaccess</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.food.ordering.system</groupId>
        <artifactId>payment-messaging</artifactId>
        <version>${project.version}</version>
      </dependency>

      <!-- Restaurant ...-->
      <dependency>
        <groupId>com.food.ordering.system</groupId>
        <artifactId>restaurant-domain-core</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.food.ordering.system</groupId>
        <artifactId>restaurant-domain-service</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.food.ordering.system</groupId>
        <artifactId>restaurant-dataaccess</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.food.ordering.system</groupId>
        <artifactId>restaurant-messaging</artifactId>
        <version>${project.version}</version>
      </dependency>

      <!-- Vulnerability Temp Fixing Start ...-->
      <dependency>
        <groupId>org.yaml</groupId>
        <artifactId>snakeyaml</artifactId>
        <version>2.0</version>
      </dependency>
      <!-- Vulnerability Temp Fixing End ...-->

      <!-- PostgreSQL ...-->
      <dependency>
        <groupId>org.postgresql</groupId>
        <artifactId>postgresql</artifactId>
        <version>${postgresql.version}</version>
      </dependency>

      <!-- Test ...-->
      <dependency>
        <groupId>org.mockito</groupId>
        <artifactId>mockito-core</artifactId>
        <version>${mockito.version}</version>
        <scope>test</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-logging</artifactId>
    </dependency>

  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>${maven-compiler-plugin.version}</version>
        <configuration>
          <release>17</release>
        </configuration>
      </plugin>
    </plugins>
  </build>

</project>